src/objects/Currency_Conversion_Rate__mdt.object
<CustomObject>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <description>Currency conversion rate for selected currency to USD</description>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <description>Currency that corresponds to the specified conversion rate</description>
        <label>Currency Code</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MXN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRY</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <description>The end date of the period that the exchange rate is effective for.</description>
        <label>Effective End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <description>The beginning date of the period that the exchange rate is effective for.</description>
        <label>Effective Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Currency Conversion Rate</label>
    <pluralLabel>Currency Conversion Rates</pluralLabel>
</CustomObject>